--- a/Server/wwwroot/index.html
+++ b/Server/wwwroot/index.html
@@ -11,8 +11,8 @@
            </h1>
        </div>
        <div>
-           <p>Pagina statica Html e possibilità di test della Web API</p>
-           <a href="https://idsfabio.azurewebsites.net/swagger/index.html"> Per Test online</a>
+           <p>Redirect a Swagger per testare i servizi online</p>
+           <a style="border: none; text-align: center; padding: 2px 6px 2px 6px; color: #333333; text-decoration: none; display: inline-block; color: black; background-color: darkseagreen; " onMouseOut="this.style.color='#black'" onMouseOver="this.style.color='#blue'" href="https://ingsoftwareproject.azurewebsites.net/swagger/index.html"> Per Test online</a>
        </div>
 </body>
 </html>
