--- a/Server/wwwroot/index.html
+++ b/Server/wwwroot/index.html
@@ -5,14 +5,22 @@
     <title>Progetto Ingegneria del Software</title>
 </head>
 <body>
-       <div>
-           <h1>
-               Progetto Fabio Bevilacqua
-           </h1>
-       </div>
-       <div>
-           <p>Redirect a Swagger per testare i servizi online</p>
-           <a style="border: none; text-align: center; padding: 2px 6px 2px 6px; color: #333333; text-decoration: none; display: inline-block; color: black; background-color: darkseagreen; " onMouseOut="this.style.color='#black'" onMouseOver="this.style.color='#blue'" href="https://ingsoftwareproject.azurewebsites.net/swagger/index.html"> Per Test online</a>
-       </div>
+    <div>
+        <h1>
+            Progetto Fabio Bevilacqua
+        </h1>
+    </div>
+    <div>
+        <p>Redirect a Swagger per testare i servizi online</p>
+        <a style="border: none; text-align: center; padding: 2px 6px 2px 6px; color: #333333;
+text-decoration: none; display: inline-block; color: black; background-color: darkseagreen; " onMouseOut="this.style.color='#black'"
+           onMouseOver="this.style.color='#blue'" href="https://ingsoftwareproject.azurewebsites.net/swagger/index.html"> Per Test online</a>
+    </div>
+    <div>
+        <a style="border: none; text-align: center; padding: 2px 6px 2px 6px; color: #333333;
+text-decoration: none; display: inline-block; color: black; background-color: darkseagreen; " onMouseOut="this.style.color='#black'"
+           onMouseOver="this.style.color='#blue'"
+           href="https://docs.google.com/presentation/d/11s-hcgrW1o9Co7mcZOi2vxtYJTblyPu1fvogQiOY7D0/edit#slide=id.p6">Presentazione</a>
+    </div>
 </body>
 </html>
