--- a/Server/wwwroot/index.html
+++ b/Server/wwwroot/index.html
@@ -7,7 +7,7 @@
 <body>
     <div>
         <h1>
-            Progetto Fabio Bevilacqua
+            Progetto di Ingegneria del Software realizzato da Fabio Bevilacqua
         </h1>
     </div>
     <div>
@@ -16,7 +16,9 @@
 text-decoration: none; display: inline-block; color: black; background-color: darkseagreen; " onMouseOut="this.style.color='#black'"
            onMouseOver="this.style.color='#blue'" href="https://ingsoftwareproject.azurewebsites.net/swagger/index.html"> Per Test online</a>
     </div>
+    <div> </div>
     <div>
+        <p>Redirect alla presentazione online del progetto</p>
         <a style="border: none; text-align: center; padding: 2px 6px 2px 6px; color: #333333;
 text-decoration: none; display: inline-block; color: black; background-color: darkseagreen; " onMouseOut="this.style.color='#black'"
            onMouseOver="this.style.color='#blue'"
