modifica index.html. Corretto file di presentazione

--- a/Server/wwwroot/index.html
+++ b/Server/wwwroot/index.html
@@ -22,7 +22,7 @@ text-decoration: none; display: inline-block; color: black; background-color: da
         <a style="border: none; text-align: center; padding: 2px 6px 2px 6px; color: #333333;
 text-decoration: none; display: inline-block; color: black; background-color: darkseagreen; " onMouseOut="this.style.color='#black'"
            onMouseOver="this.style.color='#blue'"
-           href="https://docs.google.com/presentation/d/1cZ8msjG03K0UTFRAC6Qi48MBTM_4S8xo/edit#slide=id.p34">Presentazione</a>
+           href="https://docs.google.com/presentation/d/1TGJoT4YiqFexqNzflnaBAPlZy9wlDGhC/edit?rtpof=true">Presentazione</a>
     </div>
 </body>
 </html>
